# janus

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README-proxy.md  README.md  package.json  tsconfig.json
.github/workflows/: bazel.yml  cargo-deny.yml  ci.yml  codespell.yml  jim-contract.yml  proxy-pages.yml  proxy-release.yml  proxy-secret-screening.yml  proxy-upstream-compat.yml  rust-ci.yml  sdk.yml
.janus/: secret-grants.json
.jim/: contract-state.json  memory-index.json  secret-grants.json
addons/proxy/: README.md  manifest.json
addons/proxy/overlay/codex-rs/responses-api-proxy/: Cargo.toml  README.md
addons/proxy/overlay/codex-rs/responses-api-proxy/npm/: README.md  package.json
addons/proxy/overlay/codex-rs/responses-api-proxy/src/: auth.rs  lib.rs  read_api_key.rs  screening.rs
codex-rs/codex-api/: Cargo.toml
codex-rs/responses-api-proxy/: Cargo.toml  README.md
codex-rs/responses-api-proxy/npm/: README.md  package.json
codex-rs/responses-api-proxy/src/: auth.rs  lib.rs  read_api_key.rs  screening.rs  secret_socket.rs
docs/adr/: 0001-mcp-control-plane-for-agent-broker-access.md  0001-rust-host-daemon-secret-broker.md  0002-host-side-policy-enforced-secret-broker-without-mcp.md  ADR-0001-janus-canonical-home.md  ADR-0002-addon-only-root-around-upstream-submodule.md  INDEX.md  TEMPLATE.md
docs/decisions/: INDEX.md  TASK-001-host-side-http-rewrite-broker-bootstrap.md  TASK-002-multi-transport-secret-broker-adapters.md  TASK-003-janus-mcp-server-stdio-install.md  TASK-20260306-go-subfolder-reimplement-janus-in-go-subfolder.md  TASK-20260306-makefile-build-and-run-targets.md  TASK-20260307-docker-deploy-docker-deployment-makefile-build-deploy.md  TASK-20260307-git-ssh-capability.md  TASK-20260307-modularization-rust-modularization-split-monolith-files.md  TASK-20260307-no-dup-protocols-no-duplicate-protocol-adapters-remove-postgres-query.md  TASK-20260307-protocol-iteration-connect-port-capability-iteration.md  TASK-20260307-protocol-iteration-mcp-public-api-discovery-deterministic-model.md  TASK-20260307-protocol-rollout-protocol-rollout-plan-all-protocols.md  TASK-20260307-readme-ux-readme-user-focused-startup-and-mcp.md  TASK-20260307-rust-only-rust-only-remove-go-implementation.md  TASK-20260308-postgres-sidecar-credential-injector.md  TASK-20260308-wire-protocol-usability-connect-bridge.md  TASK-PROXY-PAGES-proxy-pages.md  TASK-PROXY-SECRET-SCREENING-proxy-secret-screening.md  TASK-REPO-HYGIENE-remove-root-agents.md  TASK-SECRET-REQUEST-SCRUB.md  TASK-UPSTREAM-SUBMODULE-proxy-addon-boundary.md  TEMPLATE.md
docs/playbooks/: context-memory-model.md  dogfooding-loop.md  implementation-loop.md  sota-mapping.md  (+1 more)
evolution/: CHANGELOG.md
go/: README.md  go.mod
mcp/: janus.mcp.json
scripts/: auto-audit.sh  check-jim-contract.sh  log-evolution.sh  new-adr.sh  new-decision.sh
site/: .gitignore  index.html  styles.css
skill/: SKILL.md  decision-memory.skill.yaml
src/: cli-banner.ts  janus.ts  main.rs  mcp-server.ts  mcp_server.rs  pg_sidecar.rs  pg_sidecar_main.rs  tunnel.rs  tunnel_main.rs
(+134 files in other folders)
