[package]
name = "janusd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "janusd"
path = "src/main.rs"

[[bin]]
name = "janus-mcp"
path = "src/mcp_server.rs"

[[bin]]
name = "janus-tunnel"
path = "src/tunnel_main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
