[package]
name = "codex-responses-api-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_responses_api_proxy"
path = "src/lib.rs"

[[bin]]
name = "janus"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-login = { workspace = true }
codex-process-hardening = { workspace = true }
codex-utils-home-dir = { workspace = true }
ctor = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tiny_http = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
zeroize = { workspace = true }

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
